# Dual-wallper-engine

./: CMakeLists.txt  README.md  dual-wallpaper-engine-0.1-Linux.deb  dual-wallpaper-engine-1.0.0-Linux.deb
Dual wallper engine/docs/: README.md
Dual wallper engine/gui/: app.py  dual-wallpaper-engine-gui
Dual wallper engine/src/: composer.cpp  main.cpp  monitors.cpp
include/: composer.h  monitors.h  stb_impl.cpp
